adapt test-setup for linux